# http-snap

./: Cargo.toml  LICENSE  README.md
http-examples/: get-simple.http  post-simple.http  post-small-body.http  test_environment.txt
http-examples/todo-app/: can_create_new_item_at_end_of_array.http  can_manage_todo_items_with_api_wip.http  cannot_complete_deleted_todo_item.http  cannot_complete_todo_item_multiple_times.http  cannot_create_todo_item_with_no_text.http  cannot_delete_todo_item_multiple_times.http  debug.http  redirect_to_sign_in.http  reject_unauthenticated_user.http  sign_in.http
src/: cli.rs  client.rs  comparer.rs  lib.rs  main.rs  merger.rs  request_extractor.rs  snapshot_types.rs  types.rs  variable_generator.rs  variable_store.rs
src/detector/: detector_trait.rs  guid_detector.rs  mod.rs  timestamp_detector.rs
src/parser/: body_parser.rs  header_parser.rs  mod.rs  option_parser.rs  snapshot_parser.rs  url_parser.rs  variable_parser.rs
tests/: e2e_test.rs  parser_tests.rs  variable_store_tests.rs
tests/common/: mod.rs
tests/e2e_inputs/: array_structure_patterns.http  compare_guid_formats.http  compare_timestamp_formats.http  detect_guid.http  detect_guid_and_timestamp.http  detect_timestamp_formats.http  detect_timestamp_formats_keeping_values.http  generate_guid.http  importee.http  importer.http  markdown_with_multiple_sections.md  post_with_body_but_default_header.http  post_with_no_response.http  send_get_with_no_body.http  simple_markdown.md  status_pattern.http  (+2 more)
vs-code-extension/: CHANGELOG.md  README.md  package.json
(+14 files in other folders)
