[package]
name = "http-snap"
version = "0.1.0"
edition = "2021"

[dependencies]
chumsky = "0.9.3"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.217", features = ["derive"] }
mockito = "1.6.1"
