[package]
name = "http-snap"
version = "0.1.0"
edition = "2021"

[dependencies]
chumsky = "0.9.3"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc", "raw_value"] }
serde = { version = "1.0.217", features = ["derive"] }
indoc = "2.0.5"
clap = { version = "4.5.31", features = ["derive"] }
glob = "0.3.2"
log = "0.4"
env_logger = "0.11"
chrono = "0.4.40"
uuid = { version = "1.16.0", features = ["v4"] }
itertools = "0.14.0"

[dev-dependencies]
insta = { version = "1.42.1" }
wiremock = "0.6.3"
